# oorlu-cli

./: LICENSE  README.rst  pyproject.toml  setup.py
src/oorlu_cli/: __init__.py  cli.py  oorlu.py  validator.py
tests/: __init__.py  test_oorlu_cli.py
