[tool.poetry]
name = "oorlu-cli"
version = "0.1.0"
description = "Simple URL shortener CLI written in Python"
authors = ["Adam W. <adam1edinburgh@gmail.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["oorlu-cli"]
repository = "https://github.com/adamwojt/oorlu-cli"
packages = [
    { include = "oorlu_cli", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adamwojt/oorlu-cli/issues"
"Source" = "https://github.com/adamwojt/oorlu-cli"

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7.0"
requests = "^2.13.0"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
wheel = "^0.33.6"
pytest = "^4.6.5"
pytest-runner = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
[tool.poetry.plugins."console_scripts"]
"oorlu" = "oorlu_cli.cli:main"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
